force-app/main/default/objects/Case/fields/Child_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Lead_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field renamed from &quot;Child Lead Name&quot; to &quot;Lead Interest Name&quot;</description>
    <label>Lead Interest Name</label>
    <referenceTo>Child_Lead__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>