force-app/main/default/objects/Case/fields/FCI_Customer_Support__c.field-meta.xml
<CustomField>
    <fullName>FCI_Customer_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FCI Customer Support</label>
    <referenceTo>FCI_Customer_Support__c</referenceTo>
    <relationshipLabel>FCI Notifications</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>