force-app/main/default/objects/Case/fields/FCRequestor__c.field-meta.xml
<CustomField>
    <fullName>FCRequestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>To use the field if the requestor is not in salesforce and is not a customer contact</inlineHelpText>
    <label>FC Requestor</label>
    <referenceTo>Salesforce_or_Non_Salesforce_User__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>