force-app/main/default/objects/Case/fields/Opportunities_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Count__c</fullName>
    <label>Opportunities Count</label>
    <summaryForeignKey>Opportunity_Case_Association__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>