force-app/main/default/objects/Case/fields/QA_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>QA_Sub_Type__c</fullName>
    <description>Sub Type Request Classification for QA Process</description>
    <inlineHelpText>If needed, please select the sub-type classification for QA Process</inlineHelpText>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal welfare</fullName>
            </value>
            <value>
                <fullName>Bio</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>GFSI (BRC/IFS/FSSC22000)</fullName>
            </value>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Other (email attachment)</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>RFA (UTZ)</fullName>
            </value>
            <value>
                <fullName>RSPO</fullName>
            </value>
            <value>
                <fullName>SHE</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>Weidegang</fullName>
            </value>
            <value>
                <fullName>FC spec</fullName>
            </value>
            <value>
                <fullName>Review customer spec</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>