force-app/main/default/objects/Case/fields/Sample_Needed__c.field-meta.xml
<CustomField>
    <fullName>Sample_Needed__c</fullName>
    <description>Check whether sample is needed for danone quality complaints , if yes then sample received picklist opens</description>
    <inlineHelpText>Sample needed from Customer?</inlineHelpText>
    <label>Sample Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>