force-app/main/default/objects/Case/fields/TSS_Sub_type__c.field-meta.xml
<CustomField>
    <fullName>TSS_Sub_type__c</fullName>
    <description>Sub type Request for classification for TSS process</description>
    <inlineHelpText>Please select the Sub type Request for TSS process</inlineHelpText>
    <label>TSS Sub type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital Marketing Campaigns</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Exisiting product-existing customer</fullName>
            </value>
            <value>
                <fullName>Existing product new customer</fullName>
            </value>
            <value>
                <fullName>New product existing customer</fullName>
            </value>
            <value>
                <fullName>New product new customer</fullName>
            </value>
            <value>
                <fullName>Training Material</fullName>
            </value>
            <value>
                <fullName>Existing product in use by customer</fullName>
            </value>
            <value>
                <fullName>Customer interested in an FC product from an existing portfolio</fullName>
            </value>
            <value>
                <fullName>Customer interested in a new FC product (NPD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>