force-app/main/default/objects/Case/fields/Visit_Reports_Count__c.field-meta.xml
<CustomField>
    <fullName>Visit_Reports_Count__c</fullName>
    <label>Visit Reports Count</label>
    <summaryForeignKey>Visit_Case_Association__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>