force-app/main/default/objects/Case/validationRules/Validation_Requires_Case_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Requires_Case_Resolution</fullName>
    <active>true</active>
    <description>Validation rule for preventing support team to close helpdesk cases without Resolution and Root cause.</description>
    <errorConditionFormula>AND(
    $RecordType.Name =&apos;Helpdesk Case&apos;,
    TEXT(Status)=&apos;Closed&apos;, TEXT( Support_Type__c )&lt;&gt;&apos;Access &amp; License Management&apos;,
OR(
    ISBLANK(Case_Resolution__c),
    ISBLANK(TEXT(Root_Cause__c))

)
)</errorConditionFormula>
    <errorMessage>Please enter Case Resolution and Root Cause to Close the Helpdesk Case.</errorMessage>
</ValidationRule>